Stock Price Prediction Graph Uploaded

--- a/#2 - Stock Market Prediction using Numerical and Textual Analysis/Task2 -  Stock Market Prediction using Numerical and Textual Analysis.ipynb
+++ b/#2 - Stock Market Prediction using Numerical and Textual Analysis/Task2 -  Stock Market Prediction using Numerical and Textual Analysis.ipynb
@@ -3372,7 +3372,7 @@
     }
    ],
    "source": [
-    "plt.savefig('Stock Price Prediction.png')"
+    "plt.savefig('Stock Price Prediction.jpg')"
    ]
   },
   {
