Update Task2 -  Stock Market Prediction using Numerical and Textual Analysis.ipynb

--- a/#2 - Stock Market Prediction using Numerical and Textual Analysis/Task2 -  Stock Market Prediction using Numerical and Textual Analysis.ipynb
+++ b/#2 - Stock Market Prediction using Numerical and Textual Analysis/Task2 -  Stock Market Prediction using Numerical and Textual Analysis.ipynb
@@ -3326,12 +3326,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plotting the Predicted data against Test data"
+    "## Plotting the Predicted data against Test data and Saving the Result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -3353,34 +3353,9 @@
     "plt.plot(predictions, label=\"Predicted Close price\")\n",
     "plt.plot([row[0] for row in y_test], label = \"Testing Close Price\")\n",
     "plt.legend(loc='upper center', bbox_to_anchor=(0.5, -0.05), fancybox=True, shadow=True, ncol=2, prop={'size': 20})\n",
+    "plt.savefig('Stock Price Prediction.jpg')\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "plt.savefig('Stock Price Prediction.jpg')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
