Update Task2 -  Stock Market Prediction using Numerical and Textual Analysis.ipynb

--- a/#2 - Stock Market Prediction using Numerical and Textual Analysis/Task2 -  Stock Market Prediction using Numerical and Textual Analysis.ipynb
+++ b/#2 - Stock Market Prediction using Numerical and Textual Analysis/Task2 -  Stock Market Prediction using Numerical and Textual Analysis.ipynb
@@ -36,7 +36,7 @@
     "    <li> <b>warnings</b> </li>\n",
     "    <li> <b>math</b> </li>\n",
     "    <li> <b>pandas</b> </li>\n",
-    "    <li> <b>numpy (as np)</b> </li>\n",
+    "    <li> <b>numpy</b> </li>\n",
     "</ul>\n"
    ]
   },
@@ -1334,13 +1334,7 @@
    "source": [
     "import nltk\n",
     "nltk.download('vader_lexicon')\n",
-    "# from nltk.classify import NaiveBayesClassifier\n",
-    "# from nltk.corpus import subjectivity\n",
-    "# from nltk.sentiment import SentimentAnalyzer\n",
-    "# from nltk.sentiment.util import *\n",
-    "\n",
-    "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
-    "import unicodedata\n"
+    "from nltk.sentiment.vader import SentimentIntensityAnalyzer"
    ]
   },
   {
